# fake-name-generator

./: LICENSE  README.md  generator.py  pyproject.toml
src/fake_name_generator/: generator.py
src/fake_name_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
